change img file

--- a/market.html
+++ b/market.html
@@ -219,49 +219,49 @@
       <section class="slider">
         <div class="slide">
           <div class="slide--img">
-            <img src="./شارژر.webp" alt="" />
+            <img src="./img/شارژر.webp" alt="" />
           </div>
           <span>شارژر</span>
         </div>
         <div class="slide">
           <div class="slide--img">
-            <img src="./لبتاب استوری.webp" alt="" />
+            <img src="./img/لبتاب استوری.webp" alt="" />
           </div>
           <span>لپتاب</span>
         </div>
         <div class="slide">
           <div class="slide--img">
-            <img src="./چابگر.webp" alt="" />
+            <img src="./img/چابگر.webp" alt="" />
           </div>
           <span>چاپگر</span>
         </div>
         <div class="slide">
           <div class="slide--img">
-            <img src="./وای فای.webp" alt="" />
+            <img src="./img/وای فای.webp" alt="" />
           </div>
           <span>وای فای</span>
         </div>
         <div class="slide">
           <div class="slide--img">
-            <img src="./پاوربانک.webp" alt="" />
+            <img src="./img/پاوربانک.webp" alt="" />
           </div>
           <span>پاوربانک</span>
         </div>
         <div class="slide">
           <div class="slide--img">
-            <img src="./دسته بازی.webp" alt="" />
+            <img src="./img/دسته بازی.webp" alt="" />
           </div>
           <span>گیمینگ</span>
         </div>
         <div class="slide">
           <div class="slide--img">
-            <img src="./کابل۲.webp" alt="" />
+            <img src="./img/کابل۲.webp" alt="" />
           </div>
           <span>کابل</span>
         </div>
         <div class="slide">
           <div class="slide--img">
-            <img src="./ساعت.webp" alt="" />
+            <img src="./img/ساعت.webp" alt="" />
           </div>
           <span>ساعت</span>
         </div>
@@ -295,7 +295,7 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="product">
-                <img class="product--img" src="./ps5.webp" alt="" />
+                <img class="product--img" src="./img/ps5.webp" alt="" />
                 <h4 class="caption">پلی استیشن 5 اسلیم دیسک خور</h4>
                 <div class="price">
                   <span class="takhfif">۲۹٪</span>
@@ -312,7 +312,7 @@
             </div>
             <div class="swiper-slide">
               <div class="product">
-                <img class="product--img" src="./s24ulta.webp" alt="" />
+                <img class="product--img" src="./img/s24ulta.webp" alt="" />
                 <h4 class="caption">پلی استیشن 5 اسلیم دیسک خور</h4>
                 <div class="price">
                   <span class="takhfif">۲۹٪</span>
@@ -329,7 +329,7 @@
             </div>
             <div class="swiper-slide">
               <div class="product">
-                <img class="product--img" src="./laptap.webp" alt="" />
+                <img class="product--img" src="./img/laptap.webp" alt="" />
                 <h4 class="caption">پلی استیشن 5 اسلیم دیسک خور</h4>
                 <div class="price">
                   <span class="takhfif">۲۹٪</span>
@@ -346,7 +346,7 @@
             </div>
             <div class="swiper-slide">
               <div class="product">
-                <img class="product--img" src="./پاوربانک.webp" alt="" />
+                <img class="product--img" src="./img/پاوربانک.webp" alt="" />
                 <h4 class="caption">پلی استیشن 5 اسلیم دیسک خور</h4>
                 <div class="price">
                   <span class="takhfif">۲۹٪</span>
@@ -363,7 +363,7 @@
             </div>
             <div class="swiper-slide">
               <div class="product">
-                <img class="product--img" src="./شارژر.webp" alt="" />
+                <img class="product--img" src="./img/شارژر.webp" alt="" />
                 <h4 class="caption">پلی استیشن 5 اسلیم دیسک خور</h4>
                 <div class="price">
                   <span class="takhfif">۲۹٪</span>
@@ -380,7 +380,7 @@
             </div>
             <div class="swiper-slide">
               <div class="product">
-                <img class="product--img" src="./کیس.webp" alt="" />
+                <img class="product--img" src="./img/کیس.webp" alt="" />
                 <h4 class="caption">پلی استیشن 5 اسلیم دیسک خور</h4>
                 <div class="price">
                   <span class="takhfif">۲۹٪</span>
@@ -397,7 +397,7 @@
             </div>
             <div class="swiper-slide">
               <div class="product">
-                <img class="product--img" src="./وای فای.webp" alt="" />
+                <img class="product--img" src="./img/وای فای.webp" alt="" />
                 <h4 class="caption">پلی استیشن 5 اسلیم دیسک خور</h4>
                 <div class="price">
                   <span class="takhfif">۲۹٪</span>
@@ -429,28 +429,28 @@
         <div class="brands">
           <div class="brand brand--samsung">
             <img
-              src="./samsung--icon.png"
+              src="./img/samsung--icon.png"
               alt="#"
               class="icon--brand apple--icon"
             />
           </div>
           <div class="brand brand--apple">
             <img
-              src="./apple-icon.png"
+              src="./img/apple-icon.png"
               alt="#"
               class="icon--brand apple--icon"
             />
           </div>
           <div class="brand brand--poxo">
             <img
-              src="./POCO-Emblem.png"
+              src="./img/POCO-Emblem.png"
               alt="#"
               class="icon--brand apple--icon"
             />
           </div>
           <div class="brand brand--xiaomi">
             <img
-              src="./Xiaomi-logo.png"
+              src="./img/Xiaomi-logo.png"
               alt="#"
               class="icon--brand apple--icon"
             />
@@ -563,7 +563,7 @@
         <div class="commodity">
           <div class="poster--commodity poster--sumsung">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -690,7 +690,7 @@
           </div>
           <div class="poster--commodity poster--sumsung">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -817,7 +817,7 @@
           </div>
           <div class="poster--commodity poster--sumsung">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -944,7 +944,7 @@
           </div>
           <div class="poster--commodity poster--sumsung">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -1071,7 +1071,7 @@
           </div>
           <div class="poster--commodity poster--sumsung">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -1198,7 +1198,7 @@
           </div>
           <div class="poster--commodity poster--sumsung secret">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -1325,7 +1325,7 @@
           </div>
           <div class="poster--commodity poster--sumsung secret">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -1452,7 +1452,7 @@
           </div>
           <div class="poster--commodity poster--sumsung secret">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -1579,7 +1579,7 @@
           </div>
           <div class="poster--commodity poster--sumsung secret">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -1706,7 +1706,7 @@
           </div>
           <div class="poster--commodity poster--sumsung secret">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -1833,7 +1833,7 @@
           </div>
           <div class="poster--commodity poster--sumsung secret">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -1960,7 +1960,7 @@
           </div>
           <div class="poster--commodity poster--sumsung secret">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -2087,7 +2087,7 @@
           </div>
           <div class="poster--commodity poster--sumsung secret">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -2214,7 +2214,7 @@
           </div>
           <div class="poster--commodity poster--sumsung secret">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
@@ -2341,7 +2341,7 @@
           </div>
           <div class="poster--commodity poster--sumsung secret">
             <div class="commodity--off"><span>OFF</span></div>
-            <img class="commodity--img" src="./a55.jpg" alt="" />
+            <img class="commodity--img" src="./img/a55.jpg" alt="" />
             <div class="specifications">
               <div class="specifications--icon screen--icon">
                 <svg
